合并文档  SQL 实践建议 和 数据库设计规范和约束

--- a/zh-CN/7.reference/4.development-guide-refactoring/2.sql-specifications-and-practices/1.sql-writing-restrictions.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/2.sql-specifications-and-practices/1.sql-writing-restrictions.md
@@ -14,7 +14,7 @@
 
   * 主键数据总长度不能超过 16 KB。
 
-* 类型最大长度为 32767，当创建 VARCHAR2 列时，必须列指定最大长度，且必须至少为 1 个字节。
+* 当创建 VARCHAR、VARCHAR2 列时，必须指定列最大长度，且至少为 1 个字节。
 
 * NUMBER 是变长、精确的数值类型，占 4\~40 字节存储空间，可以存储零、浮点数、正的定点数和负的定点数，NUMBER 类型具有较好的数据精确度、通用性强、可移植性强，运算效率相对浮点类型偏低。
 
@@ -30,10 +30,10 @@
 
   * 名称中没有同义词：必须使用基表指定分区或子分区扩展名，不能使用同义词，视图或任何其他对象。
 
-  * 在 PARTITION FOR 和 SUBPARTITION FOR 子句中，不能指定关键字 DEFAULT 、 MAXVALUE 或绑定变量为 partition_key_value 或 subpartition_key_value 的值。
+  * 在 PARTITION FOR 和 SUBPARTITION FOR 子句中，不能指定关键字 DEFAULT、MAXVALUE 或绑定变量为 partition_key_value 或 subpartition_key_value 的值。
 
   * 在 PARTITION 和 SUBPARTITION 子句中，不能为分区或子分区名称指定绑定变量。
 
-* 不能对回收站的对象做任何写操作（DML 或 DDL 操作)，只能进行只读操作（ SELECT ）。
+* 不能对回收站的对象做任何写操作（DML 或 DDL 操作），只能进行只读操作（SELECT）。
 
 * SELECT...FOR UPDATE SKIP LOCKED 只支持单表查询。
