--- a/zh-CN/7.reference/4.development-guide-refactoring/2.sql-specifications-and-practices/2.sql-writing-Specification/6.cache-usage-specification.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/2.sql-specifications-and-practices/2.sql-writing-Specification/6.cache-usage-specification.md
@@ -2,7 +2,7 @@
 
 本文介绍在 OceanBase 数据库关于 cache 的使用规范。
 
-* 业务上对某个字段频繁的重复写，推荐使用写缓存机制，如计数器的写入
+* 业务上对某个字段频繁的重复写，推荐使用写缓存机制，如计数器的写入。
 
 * 执行计划所占内存超过 20M 时，不会加入计划缓存。
 
