--- a/zh-CN/7.reference/4.development-guide-refactoring/2.sql-specifications-and-practices/3.sql-statement-example/1.implicit-type-conversion-related.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/2.sql-specifications-and-practices/3.sql-statement-example/1.implicit-type-conversion-related.md
@@ -95,7 +95,7 @@
           access([test1.id], [test1.name]), partitions(p0)
      |
     +-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-    1 row in set (0.00 sec)
+    1 row in set
     ```
 
   * 传入的参数值为正确的字符类型
