--- a/zh-CN/7.reference/4.development-guide-refactoring/4.database-design-specifications-and-practices/3.character-set-specification.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/4.database-design-specifications-and-practices/3.character-set-specification.md
@@ -13,7 +13,7 @@
 
 * 在创建租户时设置字符集
 
-  * 可以在 create tenant 语句添加 charset 设置，添加 `"charset=gbk"`，示例如下：
+  * 可以在 create tenant 语句添加 charset 设置，添加 `"charset=gbk"`。
 
     ```sql
     create tenant oracle replica_num = 1,
@@ -42,10 +42,11 @@
 
   * 租户字符集与客户端字符集没有直接关系，是相互独立配置的。
 
-    GBK 租户可以被 GBK 的客户端连接，也可以被 UTF8 的客户端连接。示例：
-    * 当客户端字符集为 GBK 时，server 会按照 GBK 解析和执行接收到的 SQL语句；
+    GBK 租户可以被 GBK 的客户端连接，也可以被 UTF8 的客户端连接。
 
-    * 当客户端字符集为 UTF8 时，server 会按照 UTF8 解析和执行收到的 SQL语句。
+    * 当客户端字符集为 GBK 时，server 会按照 GBK 解析和执行接收到的 SQL 语句。
+
+    * 当客户端字符集为 UTF8 时，server 会按照 UTF8 解析和执行收到的 SQL 语句。
 
   * 配置方法
 
@@ -57,15 +58,15 @@
       set global character_set_results = gbk;
       ```
 
-      * character_set_client ：客户端字符集。
+      * character_set_client：客户端字符集。
 
-      * character_set_connection ：连接字符集。在oracle租户下应设置为与 character_set_client 一致的值。
+      * character_set_connection：连接字符集。在 oracle 租户下应设置为与 character_set_client 一致的值。
 
-      * character_set_results ：server 返回给 client结果的字符集。
+      * character_set_results：server 返回给 client 结果的字符集。
 
         一般来说，客户端发给服务器，和服务器返回给客户端字符串的字符集是统一的，因此在 Oracle 模式的租户下，这三个值应该保持一致；MySQL 模式使用 3 个变量的作用是可以灵活进行配置，一般使用场景将三个变量都配置成客户端的字符集即可。
 
-    * 临时修改（仅对本Session生效）：
+    * 临时修改（仅对本Session生效）
 
       * 方法一：
 
@@ -83,7 +84,7 @@
 
 * 设置客户端字符集
 
-  * 使用 jdbc 连接 OceanBase 数据库，GBK 链路一般在 url 里修改参数设置，添加 `"characterEncoding=gbk`，示例如下：
+  * 使用 jdbc 连接 OceanBase 数据库，GBK 链路一般在 url 里修改参数设置，添加 `characterEncoding=gbk`。
 
     ```unknow
     String url = "jdbc:oceanbase://xxx.xxx.xxx.xxx:xxxx?useSSL=false&useUnicode=true&characterEncoding=gbk&connectTimeout=30000&rewriteBatchedStatements=true";
@@ -91,7 +92,7 @@
 
   * 使用 obclient 客户端连接数据库，GBK 链路 bash 环境变量推荐使用 `zh_CN.GBK` 的超集 `zh_CN.GB18030`。
 
-    * 修改 bash 环境变量：
+    * 修改 bash 环境变量
 
       ```unknow
       export LANG=zh_CN.GB18030
