--- a/zh-CN/7.reference/4.development-guide-refactoring/2.sql-specifications-and-practices/2.sql-writing-Specification/7.hint-usage-specification.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/2.sql-specifications-and-practices/2.sql-writing-Specification/7.hint-usage-specification.md
@@ -2,7 +2,7 @@
 
 本文介绍在 OceanBase 数据库关于 HINT 的使用规范。
 
-HINT 应该少用，仅在收集了相关表的统计信息并且使用语句在没有 HINT 的情况下评估了优化器计划之后，才谨慎考虑使用。更改数据库条件以及在后续版本中增强查询性能可能会导致代码中的HINT 对性能产生重大影响。
+HINT 应该少用，仅在收集了相关表的统计信息，并且使用语句在没有 HINT 的情况下评估了优化器计划之后，才谨慎考虑使用。更改数据库条件以及在后续版本中增强查询性能可能会导致代码中的 HINT 对性能产生重大影响。
 
 ## HINT 介绍
 
@@ -12,7 +12,7 @@ HINT 应该少用，仅在收集了相关表的统计信息并且使用语句在
 
 * HINT 只影响数据库优化器生成计划的逻辑，而不影响 SQL 语句本身的语义。
 
-* HINT 是一种机制，通过HINT可以使优化器生成某种特定的计划。 一般情况下，优化器会为用户查询选择最佳的执行计划，不需要用户使用 HINT 指定，但在某些场景下，优化器生成的执行计划可能不满足用户的要求，这时就需要用户使用 HINT 来显式指定生成某种执行计划。
+* HINT 是一种机制，通过 HINT 可以使优化器生成某种特定的计划。 一般情况下，优化器会为用户查询选择最佳的执行计划，不需要用户使用 HINT 指定，但在某些场景下，优化器生成的执行计划可能不满足用户的要求，这时就需要用户使用 HINT 来显式指定生成某种执行计划。
 
 ## HINT 语法
 
@@ -69,4 +69,4 @@ HINT 应该少用，仅在收集了相关表的统计信息并且使用语句在
 | QB_NAME                 | \[ qb_name\]                                       | 指定 query block 的名称。                                                        |
 | PARALLEL                | int64                                              | 指定分布式执行的并行度。                                                               |
 
-更多 hint 相关内容请参考 **《性能调优》** 中的 **SQL 调优指南** 。
+更多 hint 相关内容请参考 [SQL 调优指南](../../../3.sql-optimization/4.sql-optimization-1/1.overview-of-sql-optimization.md)。
