--- a/zh-CN/7.reference/4.development-guide-refactoring/2.sql-specifications-and-practices/3.sql-statement-example/3.weak-consistency-read.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/2.sql-specifications-and-practices/3.sql-statement-example/3.weak-consistency-read.md
@@ -2,7 +2,7 @@
 
 本文介绍在 OceanBase 数据库进行弱一致性读的最佳推荐。
 
-对于批量类或者统计类等实时性要求不高的应用，为了避免对主副本的影响，可以设置弱一致性读：配置 session 级别或弱一致性读的 hint，把读操作放到备副本执行：
+对于批量类或者统计类等实时性要求不高的应用，为了避免对主副本的影响，可以设置弱一致性读。配置 session 级别或弱一致性读的 hint，把读操作放到备副本执行：
 
 * SELECT 查询语句添加 hint
 
