--- a/zh-CN/7.reference/4.development-guide-refactoring/4.database-design-specifications-and-practices/5.use-of-table-notes.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/4.database-design-specifications-and-practices/5.use-of-table-notes.md
@@ -6,7 +6,7 @@
 
 表加注释有 2 种方式。
 
-* 在创建表的同时加注释。示例：
+* 在创建表的同时加注释。
 
   ```sql
   obclient> CREATE TABLE student(
@@ -15,7 +15,7 @@
   ageint COMMENT '年龄') COMMENT='学生信息';
   ```
 
-* 创建表后，使用 `alter` 语句加注释。 示例：
+* 创建表后，使用 `alter` 语句加注释。
 
   ```sql
   obclient> CREATE TABLE student( id INT PRIMARY KEY AUTO_INCREMENT , name VARCHAR(200) , age int);
@@ -49,7 +49,9 @@
 /*![表示版本号的连续数字字符]<空格><任意 SQL 语句 >*/
 ```
 
-* 示例 1：为表 `t1` 创建 Hash 分区，分区数为 `8` 。
+示例：
+
+* 为表 `t1` 创建 Hash 分区，分区数为 `8` 。
 
   ```sql
   obclient> CREATE TABLE t1 (c1 INT PRIMARY KEY, c2 INT) /*!50100 
@@ -57,7 +59,7 @@
   Query OK, 0 rows affected
   ```
 
-* 示例 2：使用 `ENABLE KEYS` 更新非唯一索引，批量插入的时候可以使用 `DISABLE KEYS` 先不更新，所有索引插入完之后再更新索引。
+* 使用 `ENABLE KEYS` 更新非唯一索引，批量插入的时候可以使用 `DISABLE KEYS` 先不更新，所有索引插入完之后再更新索引。
 
   ```sql
   obclient> /*!ALTER TABLE t1 DISABLE KEYS */;
@@ -68,7 +70,7 @@
   Query OK, 0 rows affected
   ```
 
-* 示例 3：支持执行 PL 的 `DROP IF EXISTS` 语法。
+* 支持执行 PL 的 `DROP IF EXISTS` 语法。
 
   ```sql
   obclient> /*!50003 DROP PROCEDURE IF EXISTS */;
