--- a/zh-CN/5.administrator-guide/6.basic-database-management/1.manage-clusters/2.manage-clusters-1.md
+++ b/zh-CN/5.administrator-guide/6.basic-database-management/1.manage-clusters/2.manage-clusters-1.md
@@ -29,13 +29,14 @@
    示例如下：
 
    ```sql
-   obclient> show parameters like 'cluster';
-   +-------+----------+----------------+----------+---------+-----------+-----------+---------------------+----------+---------+---------+-------------------+
-   | zone  | svr_type | svr_ip         | svr_port | name    | data_type | value     | info                | section  | scope   | source  | edit_level        |
-   +-------+----------+----------------+----------+---------+-----------+-----------+---------------------+----------+---------+---------+-------------------+
-   | zone1 | observer | xx.xx.xx.xx    |     2882 | cluster | NULL      | obcluster | Name of the cluster | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
-   +-------+----------+----------------+----------+---------+-----------+-----------+---------------------+----------+---------+---------+-------------------+
-   1 row in set
+   obclient> show parameters like '%cluster%';
+   +-------+----------+----------------+----------+------------+-----------+-----------+---------------------+----------+---------+---------+-------------------+
+   | zone  | svr_type | svr_ip         | svr_port | name       | data_type | value     | info                | section  | scope   | source  | edit_level        |
+   +-------+----------+----------------+----------+------------+-----------+-----------+---------------------+----------+---------+---------+-------------------+
+   | zone1 | observer | xx.xx.xx.xx    |     2882 | cluster_id | NULL      | 1         | ID of the cluster   | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   | zone1 | observer | xx.xx.xx.xx    |     2882 | cluster    | NULL      | obcluster | Name of the cluster | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   +-------+----------+----------------+----------+------------+-----------+-----------+---------------------+----------+---------+---------+-------------------+
+   2 row in set
    ```
 
 ### 通过 OCP 查看集群信息
