400易用版监控告警低错

--- a/zh-CN/7.reference/1.oceanbase-database-concepts/11.database-security/6.monitoring-and-alerting.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/11.database-security/6.monitoring-and-alerting.md
@@ -129,7 +129,7 @@ aggregate:
           repeat_interval_seconds: 3600
 ```
 
-* aggregate_wait_seconds 是首次产生高警时等待时长，该时间内产生的相同聚合维度的告警将会聚合为一条告警消息。
+* aggregate_wait_seconds 是首次产生告警时等待时长，该时间内产生的相同聚合维度的告警将会聚合为一条告警消息。
 
 * aggregate_interval_seconds 是相同聚合维度的聚合周期，即：多久新产生一条聚合的告警消息。
 
