--- a/zh-CN/1.users-guide/9.performance-tuning-guide/8.performance-whitepaper/3.use-sysbench-to-test-the-performance-of-oceanbase-database.md
+++ b/zh-CN/1.users-guide/9.performance-tuning-guide/8.performance-whitepaper/3.use-sysbench-to-test-the-performance-of-oceanbase-database.md
@@ -44,7 +44,7 @@ Sysbench 是一个基于 LuaJIT 的可编写脚本的多线程基准测试工具
 
 * OBClient ：详细信息，参考 [OBClient 文档](https://github.com/oceanbase/obclient/blob/master/README.md)
 
-* OceanBase 数据库：建议单独部署 ODP。详细信息，参考 [使用 OBD 部署 OceanBase 数据库](../../2.quick-start/4.use-obd-to-deploy-oceanbase-database.md)
+* OceanBase 数据库：建议单独部署 ODP。详细信息，参考 [生产环境部署 OceanBase 数据库](../../3.installation-and-deployment/15.deploy-oceanbase-database-in-the-production-environment.md)
 
 * iops：建议磁盘 iops 在 10000 以上
 
