--- a/zh-CN/7.reference/2.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/16.create-table.md
+++ b/zh-CN/7.reference/2.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/16.create-table.md
@@ -154,7 +154,7 @@ partition_count | subpartition_count:
 | PRIMARY KEY                                          | 为创建的表指定主键。如果不指定，则使用隐藏主键。 特别地，OceanBase 数据库不支持修改表的主键或通过 `ALTER TABLE` 语句为表添加主键，因此推荐您在创建表时指定好表的主键。     |
 | FOREIGN KEY                                          | 为创建的表指定外键。如果不指定外键名，则会使用表名 + `OBFK` + 创建时间命名。（例如，在 2021 年 8 月 1 日 00:00:00 为 `t1` 表创建的外键名称为 `t1_OBFK_1627747200000000`）。    |
 | KEY \| INDEX                                         | 为创建的表指定键或索引。 如果不指定索引名，则会使用索引引用的第一列作为索引名，如果命名存在重复，则会使用下划线（_）+ 序号的方式命名。（例如，使用 `c1` 列创建的索引如果命名重复，则会将索引命名为 `c1_2`。） 您可以通过 `SHOW INDEX` 语句查看表上的索引。  |
-| ROW_FORMAT                                           | 指定表是否开启 Encoding 存储格式。 <ul><li> `redundant`：不开启 Encoding 存储格式。   <li> `compact`：不开启 Encoding 存储格式。</li>   <li> `dynamic`：Encoding 存储格式。   <li> `compressed`：Encoding 存储格式。</li>   <li> `default`：等价 `dynamic` 模式。</li></ul>  |
+| ROW_FORMAT                                           | 指定表是否开启 Encoding 存储格式。 <ul><li> `redundant`：不开启 Encoding 存储格式。   <li> `compact`：不开启 Encoding 存储格式。</li>   <li> `dynamic`：Encoding 存储格式。   <li> `compressed`：Encoding 存储格式。</li> <li>`condensed`：selective encoding  (encoding 的子集，只使用查询更友好的编码方式)。  </li> <li> `default`：等价 `dynamic` 模式。</li></ul>  |
 | \[GENERATED ALWAYS\] AS (expr) \[VIRTUAL \| STORED\] | 创建生成列，`expr` 为用于计算列值的表达式。 <ul><li> `VIRTUAL`：列值不会被存储，而是在读取行时，在任何 `BEFORE` 触发器之后立即计算 。虚拟列不占用存储空间。</li>   <li> `STORED`：在插入或更新行时评估和存储列值。存储列确实需要存储空间并且可以被索引。</li></ul>  |
 | BLOCK_SIZE                                           | 指定表的微块大小。  |
 | COMPRESSION                                          | 指定表的压缩算法，取值如下： <ul><li> `none`：不使用压缩算法。</li>   <li> `lz4_1.0`: 使用 `lz4` 压缩算法。</li>   <li> `zstd_1.0`: 使用 `zstd` 压缩算法。</li>  <li> `snappy_1.0`: 使用 `snappy` 压缩算法。</li> </ul>    |
