--- a/zh-CN/5.data-migration/3.migrate-data-from-apsaradb-for-oceanbase-to-mysql/2.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-apsaradb-for-oceanbase-to-mysql/2.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -4,7 +4,7 @@
 
 ## OceanBase CDC 实现逻辑
 
-oblogproxy 是 OceanBase 数据库的增量日志代理服务。基于 liboblog，以服务的形式提供实时增量链路接入和管理能力，方便应用接入 OceanBase 增量日志。能够解决在网络隔离的情况下，订阅增量日志的需求，并提供多种链路接入方式。
+oblogproxy 是 OceanBase 数据库的增量日志代理服务。基于 libobcdc（原名：liboblog），以服务的形式提供实时增量链路接入和管理能力，方便应用接入 OceanBase 增量日志。能够解决在网络隔离的情况下，订阅增量日志的需求，并提供多种链路接入方式。
 
 Canal 是开源 MySQL 数据库 Binlog 的增量订阅和消费组件，基于 MySQL 数据库的增量日志解析，可以用于数据同步。
 
@@ -16,11 +16,11 @@ ob_cluster -> oblogreader -> oblogmsg -> canal_server -> canal_client -> mysql
 
 组件介绍：
 
-* liboblog 是 OceanBase CDC 的基本组件，liboblog 衍生出 oblogproxy，liboblog 依赖 oblogmsg。
+* libobcdc 是 OceanBase CDC 的基本组件，libobcdc 衍生出 oblogproxy，libobcdc 依赖 oblogmsg。
 
-* liboblog 是 C++ 动态库，将从 OceanBase 集群中拉到的增量日志按事务提交顺序向外透出，透出的方式是按 LogMessage 协议创建相关对象给使用方使用。
+* libobcdc 是 C++ 动态库，将从 OceanBase 集群中拉到的增量日志按事务提交顺序向外透出，透出的方式是按 LogMessage 协议创建相关对象给使用方使用。
 
-* ObLogReader 对 liboblog 的 C++ 封装，在 liboblog 的基础上，对创建出的 LogMessage 对象适配多种序列化输出。
+* ObLogReader 对 libobcdc 的 C++ 封装，在 libobcdc 的基础上，对创建出的 LogMessage 对象适配多种序列化输出。
 
 * logproxy 增量日志代理，并不对增量数据进行转发，而只是对新建连接请求创建对应的 oblogreader 子进程，并由该 oblogreader 子进程通过该连接直接向客户端发送按 LogMessage 序列化后的增量日志记录。LogProxy 用于对同机器上所有 ObLogReader 子进程的生命周期进行管理。
 
@@ -119,13 +119,13 @@ ob_cluster -> oblogreader -> oblogmsg -> canal_server -> canal_client -> mysql
 
     canalAdapters:
     - instance: example # canal instance Name or mq topic name
-        groups:
-        - groupId: g1
+      groups:
+      - groupId: g1
         outerAdapters:
         - name: logger
         - name: rdb
-            key: mysql1
-            properties:
+          key: mysql1
+          properties:
             jdbc.driverClassName: com.mysql.jdbc.Driver
             jdbc.url: jdbc:mysql://10.10.10.1:3306/test_data?useUnicode=false
             jdbc.username: root
