传输加密aone问题修改

--- a/zh-CN/5.administrator-guide/12.data-security-management/2.observer-in-transmission-encryption.md
+++ b/zh-CN/5.administrator-guide/12.data-security-management/2.observer-in-transmission-encryption.md
@@ -85,7 +85,7 @@
 2. 生成服务器证书。
 
    ```unknow
-   openssl x509 -req -in server-req.pem -days 3600 -CA ca.pem -CAkey ca-key.pem -set_serial 01 -out server-cert.pem
+   openssl x509 -req -in server-req.pem -days 3600 -CA ca.pem -CAkey cakey.pem -set_serial 01 -out server-cert.pem
    ```
 
 生成客户端证书
@@ -125,8 +125,7 @@
 2. 生成客户端证书。
 
    ```unknow
-   $ openssl x509 -req -in client-req.pem -days 3600 -CA ca.pem -CAkey cakey.pem -set_serial 01 -out client-cert
-   .pem
+   $ openssl x509 -req -in client-req.pem -days 3600 -CA ca.pem -CAkey cakey.pem -set_serial 01 -out client-cert.pem
    Signature ok
    subject=/C=CN/ST=ZJ/L=HZ/O=OceanBase/OU=PD/CN=obclient
    Getting CA Private Key
@@ -176,6 +175,12 @@ client-cert.pem: OK
 ```unknow
 obclient> ALTER SYSTEM SET ssl_client_authentication=TRUE;
 obclient> SHOW PARAMETERS LIKE 'ssl_client_authentication';
+```
+
+设置 OBServer 可以通过的白名单，name 要与生成客户端证书的 name 保持一致。
+
+```sql
+obclient> ALTER SYSTEM SET ob_ssl_invited_common_names='obclient'
 ```
 
 修改参数后，重启数据库。
