--- a/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/6.restore-data/7.parameters-of-the-restore.md
+++ b/zh-CN/5.administrator-guide/10.high-data-availability/2.backup-and-restoration-management/6.restore-data/7.parameters-of-the-restore.md
@@ -28,6 +28,7 @@
 
 |         参数        |     描述      |
 |--------------------|--------------|
+|table_name_list|指定恢复租户中特定表格的数据，其中表名需要包含表所属的数据库|
 | dest_tenant_name   | 指恢复的新租户的名称。 |
 | uri                | 指备份时设置的数据备份路径 `backup_data_dest` 与日志备份路径 `log_archive_dest`, 该值至少包含一条数据备份路径和一条日志归档路径, 路径间用 `,` 分隔。    |
 | timestamp          | 指恢复指定时间戳, 恢复到该时间点为止, 但不包括该 `timestamp` 位点。|
