easy of use 文档概览 链接更新

--- a/zh-CN/1.oceanbase-database-doc-overview.md
+++ b/zh-CN/1.oceanbase-database-doc-overview.md
@@ -1,13 +1,11 @@
 # 文档概览
 
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/apsaradb-for-oceanbase
-
 OceanBase 数据库是阿里巴巴和蚂蚁集团不基于任何开源产品，完全自研的原生分布式关系数据库软件，在普通硬件上实现金融级高可用，首创"三地五中心"城市级故障自动无损容灾新标准，具备卓越的水平扩展能力，全球首家通过 TPC-C 标准测试的分布式数据库，单集群规模超过 1500 节点。 产品具有云原生、强一致性、高度兼容 Oracle/MySQL 等特性， 承担支付宝 100% 核心链路，在国内几十家银行、保险公司等金融客户的核心系统中稳定运行。
 
 |                                                                                                                                                                          快速了解                                                                                                                                                                          |                                                                                                                                                                                                                                               安装部署                                                                                                                                                                                                                                                |                                                                                                                                                                                                                                                                           管理与运维                                                                                                                                                                                                                                                                           |
 |--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| [系统概念](3.user-guide/1.learn-more-about-oceanbase/2.basic-database-components.md) [与 MySQL 兼容性对比](3.user-guide/1.learn-more-about-oceanbase/6.compatibility-with-mysql.md) [与 Oracle 兼容性概述](3.user-guide/1.learn-more-about-oceanbase/3.compatibility-with-oracle-1/1.overview-of-compatibility-with-oracle.md) [管理工具](3.user-guide/1.learn-more-about-oceanbase/8.database-management-tools.md) [使用限制](3.user-guide/1.learn-more-about-oceanbase/10.constraints-on-product-specifications.md) | [部署流程](3.user-guide/3.deploy-the-oceanbase-database/2.deployment-process.md) [准备服务器](3.user-guide/3.deploy-the-oceanbase-database/3.preparations-before-deployment-1/1.prepare-server.md) [部署 OAT](3.user-guide/3.deploy-the-oceanbase-database/5.graphical-interface-deployment/1.configure-a-deployment-environment/1.deploy-oat.md) [部署 OCP](3.deploy-the-oceanbase-database/5.deploy-ocp/3.deployment-through-the-graphical-interface/2.deploy-ocp-1.md) [创建 OceanBase 集群](3.user-guide/3.deploy-the-oceanbase-database/5.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/3.create-an-oceanbase-cluster.md) [部署 OBProxy](3.user-guide/3.deploy-the-oceanbase-database/5.graphical-interface-deployment/4.deploy-obproxy/2.deploy-obproxy-1.md) [创建租户](3.user-guide/3.deploy-the-oceanbase-database/5.graphical-interface-deployment/5.create-an-oceanbase-tenant/2.create-a-tenant.md) | [扩容和缩容](3.user-guide/12.o-m-management/2.scale-out-and-scale-in-1/1.overview-of-scaling.md) [物理备份与恢复](3.user-guide/10.high-data-availability/2.backup-and-restoration-management-1/1.overview-of-physical-backup-and-recovery-1.md) [数据迁移](3.user-guide/4.data-migration-1/1.data-migration-overview-1.md) [集群性能诊断](3.user-guide/12.o-m-management/6.performance-diagnosis/1.cluster-performance-diagnosis.md) [问题排查](3.user-guide/11.o-m-management/7.troubleshooting/1.troubleshooting-overview.md) [应急处理](3.user-guide/12.o-m-management/8.emergency-response/1.database-contingency-overview.md) [SQL 调优常见问题](3.user-guide/9.sql-optimization/6.faq-about-sql-tuning.md) [升级](3.user-guide/12.o-m-management/3.upgrade-guide/1.upgrade-overview.md) |
+| [系统架构](1.learn-more-about-oceanbase/2.system-architecture.md)</br> [与 MySQL 兼容性对比](1.learn-more-about-oceanbase/4.compatibility-with-mysql.md)</br> [与 Oracle 兼容性概述](1.learn-more-about-oceanbase/3.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md)</br> [使用限制](3.user-guide/1.learn-more-about-oceanbase/10.constraints-on-product-specifications.md) | [部署流程](4.deploy-oceanbase/4.deploy/2.deployment-process.md)</br> [准备服务器](4.deploy-oceanbase/4.deploy/3.preparations-before-deployment-1/1.prepare-server.md)</br> [部署 OAT](4.deploy-oceanbase/4.deploy/6.command-line-deployment/1.configure-a-deployment-environment-2/1.install-oat-cli.md)</br> [部署 OCP](4.deploy-oceanbase/4.deploy/6.command-line-deployment/2.deploy-ocp-4/1.deployment-instructions-8.md)</br> [创建 OceanBase 集群](4.deploy-oceanbase/4.deploy/6.command-line-deployment/3.deploy-the-oceanbase-cluster-2/1.deploy-a-single-replica-oceanbase-cluster.md)</br> [部署 OBProxy](4.deploy-oceanbase/4.deploy/6.command-line-deployment/4.deploy-obproxy-4/1.deploy-obproxy-by-using-command-lines.md) </br>[创建租户](4.deploy-oceanbase/4.deploy/6.command-line-deployment/5.create-an-oceanbase-tenant-2/1.view-available-resources-of-a-business-tenant-1.md) | [扩容和缩容](7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/1.overview-of-scaling.md) </br>[物理备份与恢复](7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/1.overview-of-physical-backup-and-recovery.md)</br> [数据迁移](5.data-migration/1.data-migration-overview.md)</br> [集群性能诊断](7.reference/2.administrator-guide/7.management/4.performance-diagnosis/1.cluster-performance-diagnosis.md) </br>[应急处理](7.reference/2.administrator-guide/7.management/5.emergency-response/1.database-contingency-overview.md) </br>[SQL 调优常见问题](7.reference/3.performance-tuning-guide/5.sql-optimization/6.faq-about-sql-tuning.md)|
 
 |                                                                                                                                                                                                            开发指南                                                                                                                                                                                                             |                                                                                                                                                                                                                                                                       参考指南                                                                                                                                                                                                                                                                       |                                                                                                                                                                                                        常见问题                                                                                                                                                                                                         |
 |-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| [通过 OBClient 连接 OceanBase 数据库](14.development-guide/1.mysql-developer-guide/2.connect-to-the-oceanbase-database-3/3.connect-to-an-oceanbase-database-by-using-obclient.md) [创建表（MySQL 模式）](4.development-guide-refactoring-1/2.application-development-based-on-mysql-mode/3.create-and-manage-database-objects/6.create-and-manage-tables/2.create-a-table.md) [创建表（Oracle 模式）](14.development-guide/2.developer-guide-oracle-mode/5.create-and-manage-database-objects-1/2.create-and-manage-tables-1/2.create-a-table-1.md) [关于事务控制语句（MySQL 模式）](14.development-guide/1.mysql-developer-guide/4.about-dml-statements-and-transactions/2.about-transactional-control-statements.md) [关于事务控制语句（Oracle 模式）](14.development-guide/2.developer-guide-oracle-mode/4.about-dml-statements-and-transactions-1/2.about-transactional-control-statements-1.md) | [PL 异常处理](4.development-guide-refactoring-1/7.pl-reference/3.pl-oracle/10.exception-handling-1/1.overview-20.md) [SQL 通用语法（MySQL 模式）](4.development-guide-refactoring-1/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/1.general-syntax.md) [子查询（Oracle 模式）](4.development-guide-refactoring-1/6.sql-syntax/3.common-tenant-oracle-mode/8.queries-and-subqueries-1/6.subquery-2.md) [系统配置项（MySQL 模式）](13.system-reference/2.reference-oracle-mode/3.configuration-items-reference-2/1.overview-17.md) [系统配置项（Oracle 模式）](13.system-reference/2.reference-oracle-mode/3.configuration-items-reference-2/1.overview-17.md) [错误码（MySQL 模式）](3.user-guide/14.system-reference/6.error-code-for-mysql/1.use-error-information-1.md) [错误码（Oracle 模式）](3.user-guide/14.system-reference/7.error-code-for-oracle/1.use-error-information.md) | [产品 FAQ](3.user-guide/15.faq/1.oceanbase-products.md) [部署 FAQ](3.user-guide/15.faq/2.deployment-1.md) [SQL FAQ](3.user-guide/15.faq/3.sql-related-problems.md) [存储 FAQ](3.user-guide/15.faq/4.storage-related-questions.md) [主备库 FAQ](3.user-guide/14.faq/5.faq-about-primary-and-secondary-databases.md) [获取服务](3.user-guide/15.faq/6.oceanbase-service.md) |
+| [通过 OBClient 连接 OceanBase 数据库](3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md) </br>[创建表（MySQL 模式）](3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md) </br>[创建表（Oracle 模式）](3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md) </br>[关于事务控制语句（MySQL 模式）](3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/1.transaction-management-overview-of-mysql-mode.md) </br>[关于事务控制语句（Oracle 模式）](3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md) | [PL 异常处理（MySQL 模式）](7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/1.exception-handling-statement-mysql.md) </br>[PL 异常处理（Oracle 模式）](7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/10.exception-handling-oracle/1.exception-overview-oracle.md) </br>[SQL 通用语法（MySQL 模式）](7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/1.general-syntax-of-mysql-mode.md)</br> [子查询（Oracle 模式）](7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/8.queries-and-subqueries-of-oracle-mode/6.subquery-of-oracle-mode.md) </br>[系统配置项](7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md)  </br>[错误码（MySQL 模式）](7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md) </br>[错误码（Oracle 模式）](7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md) | [产品 FAQ](3.user-guide/15.faq/1.oceanbase-products.md) </br>[部署 FAQ](3.user-guide/15.faq/2.deployment-1.md) </br>[SQL FAQ](3.user-guide/15.faq/3.sql-related-problems.md) </br>[存储 FAQ](3.user-guide/15.faq/4.storage-related-questions.md) </br>[主备库 FAQ](3.user-guide/14.faq/5.faq-about-primary-and-secondary-databases.md) </br>[获取服务](3.user-guide/15.faq/6.oceanbase-service.md) |
