合并文档 链接更新 OceanBase 简介+快速上手

--- a/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-mysql.md
+++ b/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-mysql.md
@@ -154,7 +154,7 @@ OceanBase 数据库与 MySQL 数据库对分区的支持差异如下：
 
 * OceanBase 数据库的二级分区支持 Hash、Key、Range、Range Columns、List 和 List Columns 分区；MySQL 数据库的二级分区仅支持 Hash 分区和 Key 分区。
 
-更多分区的说明及使用请参见 [分区管理](../6.user-guide/8.distributed-storage-management/2.manage-partition-table/2.mysql-1/1.partition-overview-6.md) 。
+更多分区的说明及使用请参见 [分区管理](../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md) 。
 
 ## 备份恢复
 
@@ -232,7 +232,7 @@ OceanBase 数据库在优化器方面与 MySQL 数据库的区别，主要表现
 
 * OceanBase 数据库还支持计划缓存和预编译，MySQL 数据库并不支持。
 
-更多优化器的详细信息请参见 [SQL 调优指南](../6.user-guide/9.performance-tuning-guide/5.sql-optimization/1.sql-request-execution-process-1.md)。
+更多优化器的详细信息请参见 [SQL 调优指南](../7.reference/3.performance-tuning-guide/5.sql-optimization/1.sql-request-execution-process.md)。
 
 ## 暂不支持的功能
 
