--- a/zh-CN/1.learn-more-about-oceanbase/3.compatibility-with-oracle/3.built-in-functions.md
+++ b/zh-CN/1.learn-more-about-oceanbase/3.compatibility-with-oracle/3.built-in-functions.md
@@ -2,7 +2,7 @@
 
 本节主要介绍 OceanBase 数据库的 Oracle 模式与原生 Oracle 数据库中内建函数的详细兼容对比信息。
 
-Oracle 数据库中支持内建函数 257 个，OceanBase 数据库当前支持 155 个，更多详细信息请参阅 [函数](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/5.functions-2/1.function-overview.md)。
+Oracle 数据库中支持内建函数 257 个，OceanBase 数据库当前支持 155 个，更多详细信息请参阅 [函数](../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/1.function-overview-of-oracle-mode.md)。
 
 ## 数字函数
 
