--- a/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-mysql.md
+++ b/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-mysql.md
@@ -118,7 +118,7 @@ OceanBase 数据库支持的数据类型有：
 
 OceanBase 数据库实现了 information_schema 和 mysql 这两个内部数据库中的大部分视图，但是由于架构不同，OceanBase 数据库并不保证所有视图均能实现以及视图中所有的列含义与 MySQL 相同。
 
-更多系统视图的说明信息请参考《参考指南》文档中 [系统视图](../7.reference/5.system-reference/4.system-view-for-mysql/1.system-view-for-mysql-overview.md) 章节。
+更多系统视图的说明信息请参考《参考指南》文档中 [系统视图](../7.reference/5.system-reference/4.system-view-of-mysql-mode/1.overview-of-mysql-mode.md) 章节。
 
 ## 字符集和字符序
 
