--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql.md/1.before-you-start.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql.md/1.before-you-start.md
@@ -4,7 +4,7 @@
 
 ## 关于内存
 
-OceanBase 数据库是基于 LSM-tree 的存储引擎，不同于传统数据库实时刷脏页的机制，OceanBase 数据库将数据分为内存中的 MEMTable 和磁盘中的 SSTable，其中所有的数据更新写入操作都在内存的 MEMTable 中完成，并且在内存使用量达到一定阈值后触发 Compaction，转储至 SSTable，并释放活跃的内存。这种架构的优势是可以将随机 I/O 转化为顺序 I/O，提供更大的写入吞吐能力。详细介绍请参考 [存储架构概述](../../7.reference/4.concepts-of-oceanbase-database-system/9.storage-architecture-1/1.storage-architecture-overview.md)。
+OceanBase 数据库是基于 LSM-tree 的存储引擎，不同于传统数据库实时刷脏页的机制，OceanBase 数据库将数据分为内存中的 MEMTable 和磁盘中的 SSTable，其中所有的数据更新写入操作都在内存的 MEMTable 中完成，并且在内存使用量达到一定阈值后触发 Compaction，转储至 SSTable，并释放活跃的内存。这种架构的优势是可以将随机 I/O 转化为顺序 I/O，提供更大的写入吞吐能力。详细介绍请参考 [存储架构概述](../../7.reference/1.oceanbase-database-concepts/9.storage-architecture/1.storage-architecture-overview.md)。
 
 由于 LSM-tree 将增量数据都存放在内存中，达到一定阈值后才触发转储，这会导致小规格的租户实例运行在超过其可承载能力的密集写入场景时（例如数据导入或者运行大量数据批处理场景），会因为 MEMTable 达到上限而无法接受新的请求。OceanBase 数据库有如下几种处理方式：
 
